# mox-erc20

./: pyproject.toml
contracts/: snek_token.vy
src/: snek_token.vy
