[project]
dependencies = [
  "eth-utils>=5.2.0",
  "moccasin>=0.3.8",
]
description = "Add your description here"
name = "moccasin_project"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tools.moccasin.project]
src = "contracts"

[tool.moccasin.project]
dependencies = ["snekmate", "eth_utils", "moccasin"]
